adding HomeFiles, section 1 complete

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
   --darkblue: #0D72B8;
   --yellow: #FFC727;
   --dirtyyellow: #C38F04;
-  --lightgray: #B5C2CF;
+  --lightgray: #DDDDDD;
+  --darkgray: #B5C2CF;
   --lightblack: #505050;
   --lightviolet: #3E416C;
 }
