--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: var(--lightgray);
+    background-color: var(--darkgray);
     font-family: 'Segoe UI';
 }
 
@@ -176,7 +176,7 @@
 /* Second break point */
 @media screen and (max-width: 520px) {
     .grayTap{
-        max-width: 300px;
+        max-width: 310px;
     }
     .tap{
         justify-content: space-between;
