--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -19,6 +19,7 @@
     display: none;
     position: absolute;
     top: 30px;
+    z-index: 2;
 }
 
 #ourOfferMenu {
@@ -162,6 +163,7 @@
         color: white;
     }
     #mobileMenu {
+        z-index: 2;
         position: absolute;
         top: 25px;
         left: 6px;
